--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "devDependencies": {
     "autoprefixer": "^6.1.2",
     "grunt": "^1.0.1",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.11.0",
@@ -28,9 +26,12 @@
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-imageoptim": "^1.4.1",
     "grunt-postcss": "^0.7.1",
-    "grunt-processhtml": "^0.3.6"
+    "grunt-processhtml": "^0.3.6",
+    "normalize.css": "^6.0.0"
   }
 }
