--- a/package.json
+++ b/package.json
@@ -17,21 +17,9 @@
   },
   "homepage": "https://github.com/stevethemacguy/haven-code-challenge#readme",
   "devDependencies": {
-    "autoprefixer": "^6.1.2",
+    "browser-sync": "^2.18.8",
     "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-imageoptim": "^1.4.1",
-    "grunt-postcss": "^0.7.1",
-    "grunt-processhtml": "^0.3.6",
-    "normalize.css": "^6.0.0"
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
