--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code Challenge for Haven Agency",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "grunt sass && grunt"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/stevethemacguy/haven-code-challenge#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.8",
     "grunt": "^1.0.1",
+    "grunt-browser-sync": "^2.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0"
   }
